--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,18 +67,55 @@
                 android:layout_height="wrap_content">
 
                 <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewPager"
+                    android:id="@+id/viewPager1"
                     android:layout_width="match_parent"
                     android:layout_height="360dp"
                     android:orientation="horizontal" >
                 </androidx.viewpager2.widget.ViewPager2>
                 <me.relex.circleindicator.CircleIndicator3
-                    android:id="@+id/indicator"
+                    android:id="@+id/indicator1"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_gravity="bottom"/>
             </FrameLayout>
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="이번주 인기 테마 >"
+                        android:layout_marginLeft="16dp"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="16dp"/>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/viewPager2"
+                            android:layout_width="match_parent"
+                            android:layout_height="360dp"
+                            android:orientation="horizontal" >
+                        </androidx.viewpager2.widget.ViewPager2>
+                        <me.relex.circleindicator.CircleIndicator3
+                            android:id="@+id/indicator2"
+                            android:layout_width="match_parent"
+                            android:layout_height="48dp"
+                            android:layout_gravity="bottom"/>
+                    </FrameLayout>
+
+                </LinearLayout>
+
+
+            </FrameLayout>
 
 
         </LinearLayout>
