--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
@@ -15,114 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/logoText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="LOGO"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="right"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="50dp"
-                    app:srcCompat="@android:drawable/ic_menu_gallery" />
-
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="right"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="16dp"
-                    app:srcCompat="@android:drawable/ic_menu_camera" />
-            </FrameLayout>
-
-            <ImageButton
-                android:id="@+id/searchbarButton"
-                android:layout_width="328dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="12dp"
-                app:srcCompat="@drawable/img" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewPager1"
-                    android:layout_width="match_parent"
-                    android:layout_height="360dp"
-                    android:orientation="horizontal" >
-                </androidx.viewpager2.widget.ViewPager2>
-                <me.relex.circleindicator.CircleIndicator3
-                    android:id="@+id/indicator1"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_gravity="bottom"/>
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="이번주 인기 테마 >"
-                        android:layout_marginLeft="16dp"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:layout_marginBottom="16dp"/>
-                    <FrameLayout
-                        android:id="@+id/frameLayout2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <androidx.viewpager2.widget.ViewPager2
-                            android:id="@+id/viewPager2"
-                            android:layout_width="match_parent"
-                            android:layout_height="360dp"
-                            android:orientation="horizontal" >
-                        </androidx.viewpager2.widget.ViewPager2>
-                        <me.relex.circleindicator.CircleIndicator3
-                            android:id="@+id/indicator2"
-                            android:layout_width="match_parent"
-                            android:layout_height="48dp"
-                            android:layout_gravity="bottom"/>
-                    </FrameLayout>
-
-                </LinearLayout>
-
-
-            </FrameLayout>
-
-
-        </LinearLayout>
-
-
-    </ScrollView>
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
