--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -30,7 +30,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:text="LOGO"
+                    android:text="카테고리"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -60,65 +60,6 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="12dp"
                 app:srcCompat="@drawable/img" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewPager1"
-                    android:layout_width="match_parent"
-                    android:layout_height="360dp"
-                    android:orientation="horizontal"></androidx.viewpager2.widget.ViewPager2>
-
-                <me.relex.circleindicator.CircleIndicator3
-                    android:id="@+id/indicator1"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_gravity="bottom" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginBottom="16dp"
-                        android:text="이번주 인기 테마 >"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <FrameLayout
-                        android:id="@+id/frameLayout2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <androidx.viewpager2.widget.ViewPager2
-                            android:id="@+id/viewPager2"
-                            android:layout_width="match_parent"
-                            android:layout_height="360dp"
-                            android:orientation="horizontal"></androidx.viewpager2.widget.ViewPager2>
-
-                        <me.relex.circleindicator.CircleIndicator3
-                            android:id="@+id/indicator2"
-                            android:layout_width="match_parent"
-                            android:layout_height="48dp"
-                            android:layout_gravity="bottom" />
-                    </FrameLayout>
-
-                </LinearLayout>
-
-
-            </FrameLayout>
 
 
         </LinearLayout>
