--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,14 +62,17 @@
                 app:srcCompat="@drawable/img" />
 
             <FrameLayout
+                android:id="@+id/frameLayout1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp">
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager1"
                     android:layout_width="match_parent"
                     android:layout_height="360dp"
-                    android:orientation="horizontal"></androidx.viewpager2.widget.ViewPager2>
+                    android:orientation="horizontal" />
 
                 <me.relex.circleindicator.CircleIndicator3
                     android:id="@+id/indicator1"
