--- a/app/src/main/res/layout/recycler_room.xml
+++ b/app/src/main/res/layout/recycler_room.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
-        android:layout_marginTop="5dp"
         android:layout_marginRight="2dp"
         app:strokeColor="@color/black">
 
@@ -20,8 +19,6 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:paddingLeft="16dp"
-            android:paddingTop="4dp"
-            android:paddingEnd="16dp"
             android:paddingRight="4dp">
 
             <ImageView
@@ -29,7 +26,7 @@
                 android:layout_width="68dp"
                 android:layout_height="92dp"
                 android:layout_weight="0"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:src="@drawable/ic_launcher_background" />
 
             <LinearLayout
                 android:layout_width="match_parent"
