--- a/app/src/main/res/layout/fragment_category_item2.xml
+++ b/app/src/main/res/layout/fragment_category_item2.xml
@@ -2,9 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#9E6363"
-    tools:context=".BoardFragmentItem1" >
+    tools:context=".BoardFragmentItem1">
 
     <TextView
         android:id="@+id/textView"
