--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -23,13 +23,13 @@
     <item
         android:id="@+id/item4"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_revert"
+        android:icon="@android:drawable/ic_menu_search"
         android:title="예약"
         android:visible="true" />
     <item
         android:id="@+id/item5"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_revert"
+        android:icon="@android:drawable/ic_menu_share"
         android:title="내정보"
         android:visible="true" />
 </menu>
