--- a/app/src/main/res/layout/fragment_category_item1.xml
+++ b/app/src/main/res/layout/fragment_category_item1.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <HorizontalScrollView
@@ -73,7 +73,7 @@
         </HorizontalScrollView>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerLocal"
+            android:id="@+id/recyclerTema"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
