--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -62,7 +62,7 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager3"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal" />
 
             </FrameLayout>
