--- a/app/src/main/res/layout/fragment_category_item2.xml
+++ b/app/src/main/res/layout/fragment_category_item2.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#9E6363"
+    android:background="#FFFFFF"
+    android:orientation="vertical"
     tools:context=".bottomNavigationFragment.CategoryFragmentItem1">
 
-    <TextView
-        android:id="@+id/textView"
+    <Spinner
+        android:id="@+id/category_local_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-</FrameLayout>
+        android:layout_marginStart="6dp"
+        android:spinnerMode="dropdown" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerLocal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
