--- a/app/src/main/res/layout/fragment_board_item1.xml
+++ b/app/src/main/res/layout/fragment_board_item1.xml
@@ -3,5 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/promotion2"
-    tools:context=".Home.Fragment1" />
+    android:background="#CDDC39"
+    tools:context=".Category.CategoryFragmentItem1" />
