--- a/app/src/main/res/layout/fragment_category_item1.xml
+++ b/app/src/main/res/layout/fragment_category_item1.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".bottomNavigationFragment.CategoryFragmentItem1">
+    tools:context=".Category.CategoryFragmentItem1">
 
     <LinearLayout
         android:layout_width="match_parent"
