--- a/app/src/main/res/layout/fragment_category_item2.xml
+++ b/app/src/main/res/layout/fragment_category_item2.xml
@@ -5,13 +5,15 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".bottomNavigationFragment.CategoryFragmentItem1">
+    tools:context=".Category.CategoryFragmentItem1">
 
     <Spinner
         android:id="@+id/category_local_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:isScrollContainer="false"
         android:spinnerMode="dropdown" />
 
     <androidx.recyclerview.widget.RecyclerView
