--- a/app/src/main/res/layout/recycler_room.xml
+++ b/app/src/main/res/layout/recycler_room.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingVertical="2dp"
+    >
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
